syntax = "proto3";

package heint;

option go_package = "/proto;proto";

message Response {
    string mensaje = 1;
}
message AsientoSelect {
    string asientoID = 1;
    string asiento =2;
}
message FactBaggage {
    string BaggageID = 1;
    string Baggage = 2;
}
message SolicitudEstado {
    string cliente = 1;
}
message RequestAsignar {
    string cliente = 1;
}
message ResponseAsignar {
    string datanode = 1;
}
message ResponseEstadoAsignado {
    string datanode = 1;
    string idSistema = 2;
    map<string,bool> asientos = 3;
}
message Estado {
    string id = 1;
    map<string, bool> asientos_disponibles = 2;    
}
service BrokerService {
    // Recibe una oferta de un productor
    rpc SendOffer (Response) returns (Response);
    rpc SendEstado (Response) returns (Estado);
    rpc SendReserva (AsientoSelect) returns (Response);
    rpc SendBaggage (FactBaggage) returns (Response);
    rpc ObtenerEstadoYAsignacion(SolicitudEstado) returns (ResponseEstadoAsignado);
}
service DataNodeService {
    rpc ObtenerEstado (SolicitudEstado) returns (ResponseEstadoAsignado);
    rpc EscribirReserva (AsientoSelect) returns (Response);
}
service AsignadorService {
    rpc AsignarDataNode(RequestAsignar) returns (ResponseAsignar);
    rpc ObtenerEstadoYAsignacion(SolicitudEstado) returns (ResponseEstadoAsignado);
}

service Consensus {
  rpc RequestVote (VoteRequest) returns (VoteResponse) {}
  rpc AppendEntries (AppendRequest) returns (AppendResponse) {}
  rpc Propose (Proposal) returns (ConsensusReply) {}
}


message VoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}


message VoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}


message LogEntry {
  int32 term = 1;
  string command = 2;
}

message AppendRequest {
  int32 term = 1;
  string leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
}


message AppendResponse {
  int32 term = 1;
  bool success = 2;
  int32 match_index = 3;
}

message Proposal {
  string command = 1;
}

message ConsensusReply {
  bool success = 1;
  string result = 2;
}

service InfoService {
  rpc GetFlightStatus (FlightRequest) returns (FlightResponse) {}
}

message FlightRequest {
  string flight_id = 1;
  int64 last_version = 2;
}

message FlightResponse {
  string flight_id = 1;
  int64 version = 2;
  string state = 3;
}